src/hampi/parser/HampiParser.java
// $ANTLR 3.1b1 src/hampi/parser/Hampi.g 2010-05-18 12:13:00
 
     package hampi.parser; 
   

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class HampiParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CFGPROD", "ASSIGN", "PROGRAM", "CFGOPTION", "CFGSTAR", "CFGPLUS", "FIX", "CONTAINS", "IN", "ASSERT", "CONCAT", "SUBSEQUENCE", "VAR", "CFG", "REG", "VAL", "CONST", "RANGE", "CHARSEQRANGE", "OR", "NOTIN", "NOTCONTAINS", "CFGCHARRANGE", "CFGCHARSEQRANGE", "CFGPRODELEMSET", "VALS", "SEMI", "KW_VAR", "ID", "COLON", "INT", "KW_CFG", "BAR", "LPAREN", "RPAREN", "QUESTION", "STAR", "PLUS", "LSQUARE", "CHAR_LIT", "MINUS", "RSQUARE", "CHAR_SEQ", "STR_LIT", "KW_REG", "KW_FIX", "COMMA", "KW_STAR", "KW_OR", "KW_CONCAT", "KW_VAL", "KW_ASSERT", "KW_IN", "KW_CONTAINS", "KW_NOT", "KW_QUERY", "EQUALS", "EscapeSequence", "NEWLINE", "WS", "COMMENT", "LINE_COMMENT", "'..'"
    };
    public static final int T__66=66;
    public static final int CFGSTAR=8;
    public static final int FIX=10;
    public static final int STAR=40;
    public static final int KW_VAL=54;
    public static final int LSQUARE=42;
    public static final int CFGPROD=4;
    public static final int CONST=20;
    public static final int CONTAINS=11;
    public static final int EQUALS=60;
    public static final int ID=32;
    public static final int CFG=17;
    public static final int EOF=-1;
    public static final int LPAREN=37;
    public static final int KW_VAR=31;
    public static final int VALS=29;
    public static final int CHAR_SEQ=46;
    public static final int RPAREN=38;
    public static final int IN=12;
    public static final int CFGOPTION=7;
    public static final int COMMA=50;
    public static final int CFGPRODELEMSET=28;
    public static final int CFGCHARRANGE=26;
    public static final int KW_IN=56;
    public static final int VAL=19;
    public static final int PLUS=41;
    public static final int VAR=16;
    public static final int COMMENT=64;
    public static final int NOTCONTAINS=25;
    public static final int KW_FIX=49;
    public static final int KW_REG=48;
    public static final int LINE_COMMENT=65;
    public static final int CONCAT=14;
    public static final int KW_ASSERT=55;
    public static final int STR_LIT=47;
    public static final int KW_QUERY=59;
    public static final int RANGE=21;
    public static final int SUBSEQUENCE=15;
    public static final int INT=34;
    public static final int CHAR_LIT=43;
    public static final int RSQUARE=45;
    public static final int MINUS=44;
    public static final int REG=18;
    public static final int ASSERT=13;
    public static final int SEMI=30;
    public static final int CFGCHARSEQRANGE=27;
    public static final int CFGPLUS=9;
    public static final int COLON=33;
    public static final int WS=63;
    public static final int NEWLINE=62;
    public static final int KW_CONCAT=53;
    public static final int QUESTION=39;
    public static final int KW_OR=52;
    public static final int KW_CONTAINS=57;
    public static final int CHARSEQRANGE=22;
    public static final int OR=23;
    public static final int ASSIGN=5;
    public static final int PROGRAM=6;
    public static final int KW_STAR=51;
    public static final int EscapeSequence=61;
    public static final int BAR=36;
    public static final int KW_NOT=58;
    public static final int KW_CFG=35;
    public static final int NOTIN=24;

    // delegates
    // delegators


        public HampiParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public HampiParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return HampiParser.tokenNames; }
    public String getGrammarFileName() { return "src/hampi/parser/Hampi.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start program
    // src/hampi/parser/Hampi.g:48:2: program : ( statement SEMI )+ -> ^( PROGRAM ( statement )+ ) ;
    public final HampiParser.program_return program() throws RecognitionException {
        HampiParser.program_return retval = new HampiParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token SEMI2=null;
        HampiParser.statement_return statement1 = null;


        Object SEMI2_tree=null;
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // src/hampi/parser/Hampi.g:48:10: ( ( statement SEMI )+ -> ^( PROGRAM ( statement )+ ) )
            // src/hampi/parser/Hampi.g:48:12: ( statement SEMI )+
            {
            // src/hampi/parser/Hampi.g:48:12: ( statement SEMI )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==KW_VAR||LA1_0==KW_CFG||LA1_0==KW_REG||(LA1_0>=KW_VAL && LA1_0<=KW_ASSERT)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/hampi/parser/Hampi.g:48:13: statement SEMI
            	    {
            	    pushFollow(FOLLOW_statement_in_program284);
            	    statement1=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_statement.add(statement1.getTree());
            	    SEMI2=(Token)match(input,SEMI,FOLLOW_SEMI_in_program286); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_SEMI.add(SEMI2);


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);



            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 48:30: -> ^( PROGRAM ( statement )+ )
            {
                // src/hampi/parser/Hampi.g:48:33: ^( PROGRAM ( statement )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);

                if ( !(stream_statement.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end program

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start statement
    // src/hampi/parser/Hampi.g:50:2: statement : ( vardeclStmt | cfgStmt | regStmt | valDeclStmt | assertStmt );
    public final HampiParser.statement_return statement() throws RecognitionException {
        HampiParser.statement_return retval = new HampiParser.statement_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        HampiParser.vardeclStmt_return vardeclStmt3 = null;

        HampiParser.cfgStmt_return cfgStmt4 = null;

        HampiParser.regStmt_return regStmt5 = null;

        HampiParser.valDeclStmt_return valDeclStmt6 = null;

        HampiParser.assertStmt_return assertStmt7 = null;



        try {
            // src/hampi/parser/Hampi.g:50:12: ( vardeclStmt | cfgStmt | regStmt | valDeclStmt | assertStmt )
            int alt2=5;
            switch ( input.LA(1) ) {
            case KW_VAR:
                {
                alt2=1;
                }
                break;
            case KW_CFG:
                {
                alt2=2;
                }
                break;
            case KW_REG:
                {
                alt2=3;
                }
                break;
            case KW_VAL:
                {
                alt2=4;
                }
                break;
            case KW_ASSERT:
                {
                alt2=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // src/hampi/parser/Hampi.g:50:14: vardeclStmt
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_vardeclStmt_in_statement307);
                    vardeclStmt3=vardeclStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, vardeclStmt3.getTree());

                    }
                    break;
                case 2 :
                    // src/hampi/parser/Hampi.g:51:14: cfgStmt
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_cfgStmt_in_statement323);
                    cfgStmt4=cfgStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, cfgStmt4.getTree());

                    }
                    break;
                case 3 :
                    // src/hampi/parser/Hampi.g:52:14: regStmt
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_regStmt_in_statement338);
                    regStmt5=regStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, regStmt5.getTree());

                    }
                    break;
                case 4 :
                    // src/hampi/parser/Hampi.g:53:14: valDeclStmt
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_valDeclStmt_in_statement353);
                    valDeclStmt6=valDeclStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, valDeclStmt6.getTree());

                    }
                    break;
                case 5 :
                    // src/hampi/parser/Hampi.g:54:14: assertStmt
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_assertStmt_in_statement368);
                    assertStmt7=assertStmt();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, assertStmt7.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end statement

    public static class vardeclStmt_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start vardeclStmt
    // src/hampi/parser/Hampi.g:57:2: vardeclStmt : ( ( KW_VAR ID COLON INT '..' INT ) -> ^( VAR ID INT INT ) | ( KW_VAR ID COLON INT ) -> ^( VAR ID INT ) );
    public final HampiParser.vardeclStmt_return vardeclStmt() throws RecognitionException {
        HampiParser.vardeclStmt_return retval = new HampiParser.vardeclStmt_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token KW_VAR8=null;
        Token ID9=null;
        Token COLON10=null;
        Token INT11=null;
        Token string_literal12=null;
        Token INT13=null;
        Token KW_VAR14=null;
        Token ID15=null;
        Token COLON16=null;
        Token INT17=null;

        Object KW_VAR8_tree=null;
        Object ID9_tree=null;
        Object COLON10_tree=null;
        Object INT11_tree=null;
        Object string_literal12_tree=null;
        Object INT13_tree=null;
        Object KW_VAR14_tree=null;
        Object ID15_tree=null;
        Object COLON16_tree=null;
        Object INT17_tree=null;
        RewriteRuleTokenStream stream_COLON=new RewriteRuleTokenStream(adaptor,"token COLON");
        RewriteRuleTokenStream stream_66=new RewriteRuleTokenStream(adaptor,"token 66");
        RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_KW_VAR=new RewriteRuleTokenStream(adaptor,"token KW_VAR");

        try {
            // src/hampi/parser/Hampi.g:57:14: ( ( KW_VAR ID COLON INT '..' INT ) -> ^( VAR ID INT INT ) | ( KW_VAR ID COLON INT ) -> ^( VAR ID INT ) )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==KW_VAR) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==ID) ) {
                    int LA3_2 = input.LA(3);

                    if ( (LA3_2==COLON) ) {
                        int LA3_3 = input.LA(4);

                        if ( (LA3_3==INT) ) {
                            int LA3_4 = input.LA(5);

                            if ( (LA3_4==66) ) {
                                alt3=1;
                            }
                            else if ( (LA3_4==EOF||LA3_4==SEMI) ) {
                                alt3=2;
                            }
                            else {
                                if (state.backtracking>0) {state.failed=true; return retval;}
                                NoViableAltException nvae =
                                    new NoViableAltException("", 3, 4, input);

                                throw nvae;
                            }
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 3, 3, input);

                            throw nvae;
                        }
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 2, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // src/hampi/parser/Hampi.g:57:18: ( KW_VAR ID COLON INT '..' INT )
                    {
                    // src/hampi/parser/Hampi.g:57:18: ( KW_VAR ID COLON INT '..' INT )
                    // src/hampi/parser/Hampi.g:57:19: KW_VAR ID COLON INT '..' INT
                    {
                    KW_VAR8=(Token)match(input,KW_VAR,FOLLOW_KW_VAR_in_vardeclStmt403); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_KW_VAR.add(KW_VAR8);

                    ID9=(Token)match(input,ID,FOLLOW_ID_in_vardeclStmt405); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID9);

                    COLON10=(Token)match(input,COLON,FOLLOW_COLON_in_vardeclStmt407); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_COLON.add(COLON10);

                    INT11=(Token)match(input,INT,FOLLOW_INT_in_vardeclStmt409); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_INT.add(INT11);

                    string_literal12=(Token)match(input,66,FOLLOW_66_in_vardeclStmt411); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_66.add(string_literal12);

                    INT13=(Token)match(input,INT,FOLLOW_INT_in_vardeclStmt413); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_INT.add(INT13);


                    }



                    // AST REWRITE
                    // elements: INT, INT, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 57:49: -> ^( VAR ID INT INT )
                    {
                        // src/hampi/parser/Hampi.g:57:52: ^( VAR ID INT INT )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VAR, "VAR"), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());
                        adaptor.addChild(root_1, stream_INT.nextNode());
                        adaptor.addChild(root_1, stream_INT.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // src/hampi/parser/Hampi.g:58:21: ( KW_VAR ID COLON INT )
                    {
                    // src/hampi/parser/Hampi.g:58:21: ( KW_VAR ID COLON INT )
                    // src/hampi/parser/Hampi.g:58:22: KW_VAR ID COLON INT
                    {
                    KW_VAR14=(Token)match(input,KW_VAR,FOLLOW_KW_VAR_in_vardeclStmt449); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_KW_VAR.add(KW_VAR14);

                    ID15=(Token)match(input,ID,FOLLOW_ID_in_vardeclStmt451); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID15);

                    COLON16=(Token)match(input,COLON,FOLLOW_COLON_in_vardeclStmt453); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_COLON.add(COLON16);

                    INT17=(Token)match(input,INT,FOLLOW_INT_in_vardeclStmt455); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_INT.add(INT17);


                    }



                    // AST REWRITE
                    // elements: INT, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 58:43: -> ^( VAR ID INT )
                    {
                        // src/hampi/parser/Hampi.g:58:46: ^( VAR ID INT )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(VAR, "VAR"), root_1);

                        adaptor.addChild(root_1, stream_ID.nextNode());
                        adaptor.addChild(root_1, stream_INT.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;retval.tree = root_0;}
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end vardeclStmt

    public static class cfgStmt_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start cfgStmt
    // src/hampi/parser/Hampi.g:61:2: cfgStmt : ( KW_CFG cfgProduction ) -> ^( CFG cfgProduction ) ;
    public final HampiParser.cfgStmt_return cfgStmt() throws RecognitionException {
        HampiParser.cfgStmt_return retval = new HampiParser.cfgStmt_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token KW_CFG18=null;
        HampiParser.cfgProduction_return cfgProduction19 = null;


        Object KW_CFG18_tree=null;
        RewriteRuleTokenStream stream_KW_CFG=new RewriteRuleTokenStream(adaptor,"token KW_CFG");
        RewriteRuleSubtreeStream stream_cfgProduction=new RewriteRuleSubtreeStream(adaptor,"rule cfgProduction");
        try {
            // src/hampi/parser/Hampi.g:61:10: ( ( KW_CFG cfgProduction ) -> ^( CFG cfgProduction ) )
            // src/hampi/parser/Hampi.g:61:12: ( KW_CFG cfgProduction )
            {
            // src/hampi/parser/Hampi.g:61:12: ( KW_CFG cfgProduction )
            // src/hampi/parser/Hampi.g:61:13: KW_CFG cfgProduction
            {
            KW_CFG18=(Token)match(input,KW_CFG,FOLLOW_KW_CFG_in_cfgStmt494); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_KW_CFG.add(KW_CFG18);

            pushFollow(FOLLOW_cfgProduction_in_cfgStmt496);
            cfgProduction19=cfgProduction();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_cfgProduction.add(cfgProduction19.getTree());

            }



            // AST REWRITE
            // elements: cfgProduction
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 61:35: -> ^( CFG cfgProduction )
            {
                // src/hampi/parser/Hampi.g:61:38: ^( CFG cfgProduction )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CFG, "CFG"), root_1);

                adaptor.addChild(root_1, stream_cfgProduction.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end cfgStmt

    public static class cfgProduction_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start cfgProduction
    // src/hampi/parser/Hampi.g:63:2: cfgProduction : ( ID ASSIGN cfgProductionSet ) -> ^( CFGPROD ID cfgProductionSet ) ;
    public final HampiParser.cfgProduction_return cfgProduction() throws RecognitionException {
        HampiParser.cfgProduction_return retval = new HampiParser.cfgProduction_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID20=null;
        Token ASSIGN21=null;
        HampiParser.cfgProductionSet_return cfgProductionSet22 = null;


        Object ID20_tree=null;
        Object ASSIGN21_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_ASSIGN=new RewriteRuleTokenStream(adaptor,"token ASSIGN");
        RewriteRuleSubtreeStream stream_cfgProductionSet=new RewriteRuleSubtreeStream(adaptor,"rule cfgProductionSet");
        try {
            // src/hampi/parser/Hampi.g:63:16: ( ( ID ASSIGN cfgProductionSet ) -> ^( CFGPROD ID cfgProductionSet ) )
            // src/hampi/parser/Hampi.g:63:18: ( ID ASSIGN cfgProductionSet )
            {
            // src/hampi/parser/Hampi.g:63:18: ( ID ASSIGN cfgProductionSet )
            // src/hampi/parser/Hampi.g:63:19: ID ASSIGN cfgProductionSet
            {
            ID20=(Token)match(input,ID,FOLLOW_ID_in_cfgProduction516); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID20);

            ASSIGN21=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_cfgProduction518); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ASSIGN.add(ASSIGN21);

            pushFollow(FOLLOW_cfgProductionSet_in_cfgProduction521);
            cfgProductionSet22=cfgProductionSet();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_cfgProductionSet.add(cfgProductionSet22.getTree());

            }



            // AST REWRITE
            // elements: ID, cfgProductionSet
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 63:49: -> ^( CFGPROD ID cfgProductionSet )
            {
                // src/hampi/parser/Hampi.g:63:52: ^( CFGPROD ID cfgProductionSet )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CFGPROD, "CFGPROD"), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());
                adaptor.addChild(root_1, stream_cfgProductionSet.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }
